--- a/01-Week/03-Day/09-FloatLayout-Activity/Unsolved/floats.css
+++ b/01-Week/03-Day/09-FloatLayout-Activity/Unsolved/floats.css
@@ -8,6 +8,7 @@
 }
 
 body {
+  font-size: 24px;
 }
 
 header {
@@ -21,22 +22,72 @@ section {
 }
 
 #left {
+  float : left;
+  background-color: #333333;
+  width: 33.3%;
+  height: 80px;
+
 }
 
 #middle {
+  float: left;
+  background-color: #cccccc;
+  width: 33.3%;
+  height: 80px;
+
 }
 
 #right {
+  float : left;
+  background-color: #333333;
+  width: 33.3%;
+  height: 80px;
+
 }
 
 #full {
+
+  height: 230px;
+  margin-top: 20px;
+  background-color: #eeeeee;
+  padding-top: 40px;
+  float: left;
+  width : 100%;
+  text-align: center;
+  padding-left: 20px;
 }
 
 #division {
+  background-color: #5da4d2;
+  height: 60px;
+  margin-right: 20px;
+
 }
 
 aside {
+  background-color: white;
+  float: left;
+  height: 160px;
+  padding-left: 150px;
+  padding-right: 120px;
+  margin-left: 30px;
+
 }
 
 footer {
+
+  background-color: #cccccc;
+  margin-top: 20px;
+  float: left;
+  width: 100%;
+  height: 60px;
+
+}
+
+.clearfix::after {
+  content: ".";
+  visibility: hidden;
+  display: block;
+  height: 0;
+  clear: both;
 }
